argocd/alb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huma-counter-href-10-sites
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
  selector:
    app.kubernetes.io/name: huma-counter-href-10-sites
